Criado o projeto com Hakyll.

--- a/src/cabal.sandbox.config
+++ b/src/cabal.sandbox.config
@@ -4,15 +4,15 @@
 -- if you want to change the default settings for this sandbox.
 
 
-local-repo: /home/lemol/L9T/labs/haskell/blog.lemol/.cabal-sandbox/packages
-logs-dir: /home/lemol/L9T/labs/haskell/blog.lemol/.cabal-sandbox/logs
-world-file: /home/lemol/L9T/labs/haskell/blog.lemol/.cabal-sandbox/world
+local-repo: /home/lemol/L9T/labs/haskell/blog.lemol/src/.cabal-sandbox/packages
+logs-dir: /home/lemol/L9T/labs/haskell/blog.lemol/src/.cabal-sandbox/logs
+world-file: /home/lemol/L9T/labs/haskell/blog.lemol/src/.cabal-sandbox/world
 user-install: False
-package-db: /home/lemol/L9T/labs/haskell/blog.lemol/.cabal-sandbox/i386-linux-ghc-7.8.3-packages.conf.d
-build-summary: /home/lemol/L9T/labs/haskell/blog.lemol/.cabal-sandbox/logs/build.log
+package-db: /home/lemol/L9T/labs/haskell/blog.lemol/src/.cabal-sandbox/i386-linux-ghc-7.8.3-packages.conf.d
+build-summary: /home/lemol/L9T/labs/haskell/blog.lemol/src/.cabal-sandbox/logs/build.log
 
 install-dirs
-  prefix: /home/lemol/L9T/labs/haskell/blog.lemol/.cabal-sandbox
+  prefix: /home/lemol/L9T/labs/haskell/blog.lemol/src/.cabal-sandbox
   bindir: $prefix/bin
   libdir: $prefix/lib
   libsubdir: $arch-$os-$compiler/$pkgid
