--- a/lemol-pages.cabal
+++ b/lemol-pages.cabal
@@ -1,4 +1,4 @@
-name:               lemolpages
+name:               lemol-pages
 maintainer:         Leza Morais Lutonda (Lemol-C)
 synopsis:           Lemol-C's Blog
 description:        Minhas paginas
@@ -9,6 +9,7 @@ build-type:         Simple
 cabal-version:      >= 1.10
 
 executable site
+  hs-source-dirs:       src
   main-is:          site.hs
   build-depends:    base == 4.*
                   , hakyll == 4.5.*
