--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,31 @@
-Thumbs.db
-dist/
-libs
-dist
-docs
-wiki
-TAGS
+# Linux
+*~
+.directory
+
+# Vim
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
 tags
-wip
-.DS_Store
-.*.swp
-.*.swo
+
+# Haskell
+dist
+cabal-dev
 *.o
 *.hi
-*~
-*#
-.cabal-sandbox
-_cache
-site/
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.virtualenv
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+cabal.config
+*.prof
+*.aux
+*.hp
