--- a/lemol-pages.cabal
+++ b/lemol-pages.cabal
@@ -14,5 +14,6 @@ executable site
   build-depends:    base == 4.*
                   , hakyll == 4.5.*
                   , data-default
+                  , old-locale
   ghc-options:      -threaded
   default-language: Haskell2010
