--- a/lemol-pages.cabal
+++ b/lemol-pages.cabal
@@ -12,8 +12,8 @@ executable site
   hs-source-dirs:       src
   main-is:          site.hs
   build-depends:    base == 4.*
-                  , hakyll == 4.5.*
+                  , hakyll
                   , data-default
-                  , old-locale
+                  , time
   ghc-options:      -threaded
   default-language: Haskell2010
